# MosaiCell

./: .gitignore  CMakeLists.txt  README.md
bench/: benchmark_mutex.hh  preprocess_format_compare_bench.cu  scrna_preprocess_bench.cu
cmake/: CellShardPreprocessConfig.cmake.in
include/CellShardPreprocess/: aliases.hh  preprocess.cuh  runtime.hh
include/MosaiCell/: preprocess.cuh  runtime.hh
python/cellshard/preprocess/: __init__.py
python/cellshard_preprocess/: __init__.py
python/mosaicell/: __init__.py
src/: preprocess.cu  runtime.cc
src/apps/: workbench_main.cc
tests/: adapter_staging_test.cc  double_preprocess_rejection_test.cc  preprocess_runtime_test.cu  qc_fleet_test.cu  qc_mask_groups_test.cu  qc_metrics_equivalence_test.cu
